# verianet

./: .gitignore  README.md  SampleNNs.ipynb  VerySmallNN.ipynb  basic.py  constraint.py  constraint_analysis.npz  deep_analysis.py  epsilon_robustness_test.py  example.ipynb  export_weights.py  finding.py  helper.py  ideal_digits.py  interactive_nn_viz.py  main.ipynb  pyproject.toml  requirements.txt  robustness_check.py  tester.py  verysmallnn_weights.npz
.ipynb_checkpoints/: VerySmallNN-checkpoint.ipynb
demo/: index.html  mnist_samples.json  weights.json
docs/: gelu_envelopes.md  refinement.md
mechanistic_analysis/: max_logits.py  pixel_investigation.py  simple_neuron_probe.py  study_mechanism.py
notebooks/: example.ipynb
presentation/: generate-pdf.sh  index.html  print.html
results/: epsilon_robustness_results.npz  epsilon_robustness_test.txt
scripts/: __init__.py
scripts/experiments/: __init__.py  epsilon_robustness_test.py  export_weights.py  finding.py  ideal_digits.py  interactive_nn_viz.py  robustness_check.py
scripts/exploratory/: __init__.py  constraint.py  deep_analysis.py  tester.py
scripts/mechanistic/: __init__.py  max_logits.py  simple_neuron_probe.py  study_mechanism.py
tests/: __init__.py  test_core.py
verianet/: __init__.py  activations.py  bounds.py  counterfactual.py  lp.py  network.py  objectives.py  paths.py  refinement.py  stats.py
verianet/legacy/: __init__.py  basic.py  pyomo.py
